--- a/foundations/intro-to-css/01-css-methods/index.html
+++ b/foundations/intro-to-css/01-css-methods/index.html
@@ -9,13 +9,13 @@
       p {
         color: white ;
         background-color:  green ;
-      }
+      } 
     </style>
     <title>Methods for Adding CSS</title>
   </head>
   <body>
     <div>Style me via the external method!</div>
     <p>I would like to be styled with the internal method, please.</p>
-    <button>Inline Method</button>
+    <button style="color:black; background-color: yellow;">Inline Method</button>
   </body>
 </html>
